--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Jeffrey's Personal Site</title>
+    <title>Pop's Personal Site</title>
   </head>
   <body>
     <table cellspacing="10">
@@ -11,7 +11,7 @@
       </td>
       <td>
         <h1>
-          <strong>Jeffrey Nibbs</strong>
+          <strong>Pop</strong>
         </h1>
         <p>
           <em>
